# AutoUI

./: AutoScroller.qml  AutoUI.desktop  CMakeLists.txt  Page1Form.ui.qml  PageClimate.qml  PageLanding.qml  PageMap.qml  PageMusic.qml  PageSensors.qml  PageWeb.qml  main.cpp  main.qml  qml.qrc
